# firecore-data-lib

./: Cargo.toml
src/: configuration.rs  lib.rs
src/player/: list.rs  mod.rs  save.rs
src/player/world/: map.rs
